--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,6 +57,8 @@
 
     <main>
         {% block body %}
+        <div class="d-flex marge-nav">
+         </div>
         {% endblock %}
     </main>
     
