--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,8 +57,7 @@
 
     <main>
         {% block body %}
-        <div class="d-flex marge-nav">
-         </div>
+        
         {% endblock %}
     </main>
     
@@ -78,5 +77,8 @@
 
 
 </body>
+    <footer>
+                        {# <p>Réalisé par Cédric KOMLA</p> #}
+    </footer>
 
 </html>
