--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -19,57 +19,64 @@
         </p>
     </div>
 
-    <!-- /* tryptique */ -->
+ 
     
-    <section id="tryptique" class="visuel">
-        <div class="row justify-content-around">
-            <div  class="text-center">
-                <div class="card card0">
-                    <div>
-                        <h2>Spotify</h2>
-                        {# <h3>Bibliothèques, Playlist, Song, Album</h3> #}
-
-                        <div class="icon">
-
-                        </div>
-                    </div>
-                </div>
-                <button type="button" class="mt-3 decalage-btn btn btn-primary">Sélectionner</button>
-            </div>
-
-            <div class="text-center">
-                <div class="card card1  ">
-                    <div>
-                        <h2>Apple Music</h2>
-                        {# <h3>Bibliothèques, Playlist, Song, Album</h3> #}
-                        <div class="icon">
-
-                        </div>
-                    </div>
-                </div>
-                <button type="button" class="mt-3 decalage-btn btn btn-primary">Sélectionner</button>
-
-            </div>
-
-            <div class="text-center">
-                <div class="card card2">
-                    <div>
-                        <h2>Youtube</h2>
-                        {# <h3>Bibliothèques, Playlist, Song, Album</h3> #}
-                        <div class="icon">
-
-
-                        </div>
-                    </div>
-                </div>
-                <button type="button" class="mt-3 decalage-btn btn btn-primary">Sélectionner</button>
-            </div>
-        </div>
-    </section>
-    </div>
-
-
+    
+   
 </section>
+   <!-- /* tryptique */ -->
+<h3> Sélectionnez votre plateforme</h3>
+<div id="container">
+    <div id="content">
+        <section id="tryptique" class="visuel">
+
+            <div class="row justify-content-around">
+                <div  class="text-center">
+                    <div class="card card0">
+                        <div>
+                            <h2>Spotify</h2>
+                  
+
+                            <div class="icon">
+
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="mt-3 decalage-btn btn btn-primary">Sélectionner</button>
+                </div>
+
+                <div class="text-center">
+                    <div class="card card1  ">
+                        <div>
+                            <h2>Apple Music</h2>
+                           
+                            <div class="icon">
+
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="mt-3 decalage-btn btn btn-primary">Sélectionner</button>
+
+                </div>
+
+                <div class="text-center">
+                    <div class="card card2">
+                        <div>
+                            <h2>Youtube</h2>
+                            {# <h3>Bibliothèques, Playlist, Song, Album</h3> #}
+                            <div class="icon">
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="mt-3 decalage-btn btn btn-primary">Sélectionner</button>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
+
 </main>
 {% endblock %}
 
