--- a/public/assets/home.css
+++ b/public/assets/home.css
@@ -40,9 +40,7 @@ header {
     
   }
   
-  header .navigation{
-    position: relative;
-  }
+
   
   header .navigation .navigation-items a {
     position: relative;
@@ -50,7 +48,7 @@ header {
     font-weight: 500;
     text-decoration: none; 
     margin-left: 0.3s ease;
-   padding: 10px ;
+   padding: 10px;
    
   }
   header.navigation-items a {
@@ -88,7 +86,12 @@ header {
 /* Tryptique central*/
 
 
-
+#content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 40px;
+}
   
   .card {
     min-height: 100px;
@@ -120,7 +123,7 @@ header {
   
   .card0 {
     background: url('Image/spotify full logo.png') center center no-repeat;
-    background-size: 300px;
+    background-size: 200px;
   }
       
   .card0:hover {
@@ -130,7 +133,7 @@ header {
   
   .card2 {
     background: url('Image/youtube full logo.jpeg') center center no-repeat;
-    background-size: 300px;
+    background-size: 200px;
   }
   
   .card2:hover {
@@ -140,7 +143,7 @@ header {
   
   .card1 {
     background: url('Image/apple music full logo.png') center center no-repeat;
-    background-size: 300px;
+    background-size: 200px;
   }
   
   .card1:hover {
@@ -158,7 +161,9 @@ header {
   
   
   h3 {
-    color: white;
+    display: flex;
+    align-items: center;
+    justify-content:center;
   }
   
   .card:hover h2 {
@@ -220,4 +225,15 @@ header {
 
 }
 
+/* footer */
+
+footer {
+  background-color: #e3e3e3;
+  height: 5vh;
+  width: auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  padding: 40px;
+}
 
