--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,16 +7,6 @@
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-    <h1>Créer un compte</h1>
-
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.pseudo) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-       
-    {{ form_end(registrationForm) }}
+    {{ form(registrationForm) }}
     <p>Vous avez déjà un compte ? <a href="{{ path('app_login') }}">Connectez-vous !</a></p>
 {% endblock %}
